--- a/Bénin.html
+++ b/Bénin.html
@@ -11,7 +11,53 @@
     <label for="" style="font-size: 1.5rem;">Bénin</label><br>
     <select class="Benin" placeholder="vovoov">
     <option>choisisez votre villes</option>
-    <option>Anglais</option>
+    <option>Abomey</option>
+    <option>Abomey Calavi </option>
+    <option>Agbangnizoun</option>
+    <option>Allada</option>
+    <option>Aplahoué</option>
+    <option>Avrankou</option>
+    <option>Athiémé</option>
+    <option>Banikoara</option>
+    <option>Bassila</option>
+    <option>banikkoara</option>
+    <option>Bembéréké</option>
+    <option>Beterou</option>
+    <option>Bohicon</option>
+    <option>Bori</option>
+    <option>Boukoumbé</option>
+    <option>Comè</option>
+    <option>Cotonou</option>
+    <option>Covè</option>
+    <option>Dassa-Zoumé</option>
+    <option>Djidja</option>
+    <option>Djougou</option>
+    <option>Dogbo-Tota</option>
+    <option>Glazoué</option>
+    <option>Gogounou</option>
+    <option>Grand-Popo</option>
+    <option>Kandi</option>
+    <option>kérou</option>
+    <option>Kétou</option>
+    <option>kouandé</option>
+    <option>Lokossa</option>
+    <option>Malanville</option>
+    <option>Manala</option>
+    <option>Matéri</option>
+    <option>Natitingou</option>
+    <option>Ndali</option>
+    <option>Nikki</option>
+    <option>Ouidah</option>
+    <option>Parakou</option>
+    <option>Pobé</option>
+    <option>Porto-Novo</option>
+    <option>Sakété</option>
+    <option>Savalou</option>
+    <option>Savè</option>
+    <option>ségbana</option>
+    <option>Tchaourou</option>
+    <option>Tanguiéta</option>
+    <option>Zè</option>
     </select>
 </body>
 
