ajout de albanie

--- a/Albanie.html
+++ b/Albanie.html
@@ -8,9 +8,52 @@
 
 <body>
     <label for="" style="font-size: 1.5rem;">Bénin</label><br>
-    <select class="Benin" placeholder="vovoov">
-    <option>choisisez votre ville</option>
-    <option>Anglais</option>
+    <select class="Benin">
+    
+    <option>Bajram Curr</option>
+    <option>Ballsh</option>
+    <option>Berat</option>
+    <option>Bilisht</option>
+    <option>Bulqiza</option>
+    <option>Burrel</option>
+    <option>Cërrik</option>
+    <option>Çorovodë</option>
+    <option>Durrës</option>
+    <option>Elbasan</option>
+    <option>Erseka</option>
+    <option>Fier</option>
+    <option>Fushë-Kruja</option>
+    <option>Gjirokastra</option>
+    <option>Gramsh</option>
+    <option>Kamza</option>
+    <option>Kavaja</option>
+    <option>Korça</option>
+    <option>Krujë</option>
+    <option>Kuçovë</option>
+    <option>Kukës</option>
+    <option>Laç</option>
+    <option>Lezha</option>
+    <option>Librazhd</option>
+    <option>Lushnja</option>
+    <option>Mamurras</option>
+    <option>Patos</option>
+    <option>Peqin</option>
+    <option>Përmet</option>
+    <option>Peshkopi</option>
+    <option>Pogradec</option>
+    <option>Poliçan</option>
+    <option>Puka</option>
+    <option>Roskovec</option>
+    <option>Rrëshen</option>
+    <option>Rrogozhina</option>
+    <option>Saranda</option>
+    <option>Selenica</option>
+    <option>Shijak</option>
+    <option>Shkodra</option>
+    <option>Tepelen</option>
+    <option>Tirana</option>
+    <option>Vlora</option>
+    <option>Vora</option>
     </select>
 </body>
 </html>
