ajout de albanie

--- a/Albanie.html
+++ b/Albanie.html
@@ -7,8 +7,8 @@
 </head>
 
 <body>
-    <label for="" style="font-size: 1.5rem;">Bénin</label><br>
-    <select class="Benin">
+    <label for="" style="font-size: 1.5rem;">Albanie</label><br>
+    <select class="Albanie">
     
     <option>Bajram Curr</option>
     <option>Ballsh</option>
